Fix background on iOS intento 10

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -150,6 +150,8 @@ box-shadow: inset 0px 32px 42px -28px rgba(0,0,0,0.75);
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+    filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../imgs/bg.jpg', sizingMethod='scale');
+    -ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../imgs/bg.jpg', sizingMethod='scale')";
 }
 
 .sin-espacio-arriba {
